projenin bağımlılıkları entegre edildi. database entegrasyonu yapıldı. ana sayfada görünecek olan hatırlatıcıların liste tasarımı yapıldı. hatırlatıcı ekle sayfasının tasarımına başlanıldı.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_primary">#1D4263</color>
+    <color name="color_primary_dark">#273644</color>
+    <color name="red">#FF0000</color>
 </resources>
