--- a/app/src/main/res/layout/activity_reminder_add.xml
+++ b/app/src/main/res/layout/activity_reminder_add.xml
@@ -141,9 +141,9 @@
                 android:id="@+id/descriptionInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:focusableInTouchMode="false"
-                android:inputType="none"
+                android:focusableInTouchMode="true"
                 android:lines="5"
+                android:text="@={viewmodel.addReminderModelDescription}"
                 android:textColor="@color/black"
                 android:textSize="13sp"
                 android:textStyle="bold" />
@@ -169,6 +169,7 @@
                 android:layout_height="match_parent"
                 android:inputType="none"
                 android:lines="1"
+                android:text="@={viewmodel.addReminderModelTimer}"
                 android:textColor="#000000"
                 android:textSize="13sp"
                 android:textStyle="bold" />
