--- a/app/src/main/res/layout/reminder_item.xml
+++ b/app/src/main/res/layout/reminder_item.xml
@@ -29,8 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:text="12 Ocak 2024, 13:00"
-            android:textAlignment="center"
+            android:text="@{reminder.title}"
             android:textColor="@color/black"
             android:textSize="17sp"
             android:textStyle="bold|italic"
@@ -44,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
-            android:text="Bu bir mockuptır. Hangi ekranda hangi içeriklerin olması gerektiğidir."
+            android:text="@{reminder.description}"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:textStyle="normal"
