--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="color_primary">#1D4263</color>
     <color name="color_primary_dark">#273644</color>
     <color name="red">#FF0000</color>
+    <color name="background_start_color">#80FB8500</color>
+    <color name="background_end_color">#808ECAE6</color>
+    <color name="button_color">#219ebc</color>
 </resources>
