activity_main.xml design, changed primary color,create custom textInputLayout

--- a/app/src/main/res/layout/activity_reminder_add.xml
+++ b/app/src/main/res/layout/activity_reminder_add.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -8,9 +10,8 @@
             type="com.mobilProgramlama.odev.ui.reminder_add.ReminderAddViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@drawable/background_color"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.reminder_add.ReminderAddActivity">
@@ -28,13 +29,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="Başlık Giriniz"
-            android:textColorHint="#BBBBBB"
+            android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
-            app:hintTextColor="@color/color_primary"
+            app:hintTextColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/customToolbar">
@@ -43,11 +46,13 @@
                 android:id="@+id/titleInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="true"
                 android:inputType="text"
                 android:lines="1"
                 android:text="@={viewmodel.addReminderModelTitle}"
                 android:textColor="@color/black"
+                android:textColorHint="@color/white"
                 android:textSize="13sp"
                 android:textStyle="bold" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -59,15 +64,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="Tarih Seçiniz"
-            android:textColorHint="#BBBBBB"
+            android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
             app:endIconDrawable="@drawable/ic_calendar"
             app:endIconMode="custom"
-            app:endIconTint="@color/black"
+            app:endIconTint="@color/white"
             app:hintTextColor="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -77,6 +84,7 @@
                 android:id="@+id/dateInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -92,15 +100,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="Saat Seçiniz"
-            android:textColorHint="#BBBBBB"
+            android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
             app:endIconDrawable="@drawable/ic_time"
             app:endIconMode="custom"
-            app:endIconTint="@color/black"
+            app:endIconTint="@color/white"
             app:hintTextColor="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -110,6 +120,7 @@
                 android:id="@+id/timeInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -125,15 +136,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="Zil Sesi Seçiniz"
-            android:textColorHint="#BBBBBB"
+            android:textColorHint="@color/white"
             app:boxStrokeColor="@color/color_primary"
             app:endIconDrawable="@drawable/ic_ring"
             app:endIconMode="custom"
-            app:endIconTint="@color/black"
+            app:endIconTint="@color/white"
             app:hintTextColor="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,6 +156,7 @@
                 android:id="@+id/soundInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="false"
                 android:inputType="datetime"
                 android:lines="1"
@@ -157,11 +171,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusable="true"
             android:focusableInTouchMode="true"
             android:hint="Açıklama"
-            android:textColorHint="#BBBBBB"
+            android:textColorHint="@color/white"
+            app:boxCornerRadiusBottomEnd="30dp"
+            app:boxCornerRadiusBottomStart="30dp"
+            app:boxCornerRadiusTopEnd="30dp"
+            app:boxCornerRadiusTopStart="30dp"
             app:boxStrokeColor="@color/color_primary"
             app:hintTextColor="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
@@ -186,10 +206,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="13dp"
+            android:layout_marginEnd="16dp"
             android:focusableInTouchMode="true"
             android:hint="Hatırlatma Zamanı Seçiniz"
-            android:textColorHint="#7A7A7A"
+            android:textColorHint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout">
@@ -198,6 +220,7 @@
                 android:id="@+id/timerInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:inputType="none"
                 android:lines="1"
                 android:text="@={viewmodel.addReminderModelTimer}"
@@ -208,8 +231,10 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/saveButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="370dp"
+            android:layout_height="44dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/custom_add_button_background"
             android:text="Kaydet"
             android:textColor="@color/white"
