tamamlanan alarmalardan silme işlemi eklendi.

--- a/app/src/main/res/layout/completed_list_item.xml
+++ b/app/src/main/res/layout/completed_list_item.xml
@@ -7,6 +7,10 @@
         <variable
             name="reminder"
             type="com.mobilProgramlama.odev.data.locale.entity.reminder.ReminderEntity" />
+
+        <variable
+            name="onClick"
+            type="com.mobilProgramlama.odev.ui.completed_list.ReminderOnClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
