--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -5,7 +5,6 @@
     android:layout_height="85dp"
     android:background="@color/color_primary">
 
-
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/customToolbarTitle"
         android:layout_width="wrap_content"
@@ -15,20 +14,20 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/customToolbarOptionalButton"
         android:layout_width="30dp"
         android:layout_height="25dp"
-        android:layout_marginEnd="364dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="25dp"
         android:background="@drawable/ic_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.483" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/customToolbarDoneButton"
