--- a/app/src/main/res/layout/activity_reminder_add.xml
+++ b/app/src/main/res/layout/activity_reminder_add.xml
@@ -178,10 +178,6 @@
             android:focusableInTouchMode="true"
             android:hint="Açıklama"
             android:textColorHint="@color/white"
-            app:boxCornerRadiusBottomEnd="30dp"
-            app:boxCornerRadiusBottomStart="30dp"
-            app:boxCornerRadiusTopEnd="30dp"
-            app:boxCornerRadiusTopStart="30dp"
             app:boxStrokeColor="@color/color_primary"
             app:hintTextColor="@color/color_primary"
             app:layout_constraintEnd_toEndOf="parent"
@@ -192,6 +188,7 @@
                 android:id="@+id/descriptionInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_text_input_layout_background"
                 android:focusableInTouchMode="true"
                 android:lines="5"
                 android:text="@={viewmodel.addReminderModelDescription}"
