--- a/app/src/main/res/drawable/custom_text_input_layout_background.xml
+++ b/app/src/main/res/drawable/custom_text_input_layout_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke android:width="1dip" android:color="#80000000"/>
-    <corners android:radius="200dp"/>
+    <stroke android:width="1dip" android:color="@color/text_box_color"/>
+    <corners android:radius="20dp"/>
 
 </shape>
