--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,12 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="color_primary">#8fcaca</color>
+    <color name="color_primary">#0F1035</color>
     <color name="color_primary_dark">#273644</color>
     <color name="red">#FF0000</color>
-    <color name="background_start_color">#80FB8500</color>
-    <color name="background_end_color">#80219ebc</color>
-    <color name="button_color">#219ebc</color>
+    <color name="background_start_color">#7FC7D9</color>
+    <color name="background_end_color">#365486</color>
+    <color name="button_color">#365486</color>
+    <color name="text_box_color">#FFFFFFFF</color>
+    <color name="transparent_color">#00ffffff</color>
 </resources>
